--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "svelte-fuels",
 	"description": "A thin wrapper around the Fuels SDK for Svelte with a focus on reactivity",
 	"author": "Props Labs, Calvin Hoenes <hello@props.app> (https://www.propslabs.com)",
-	"version": "0.0.5",
+	"version": "0.94.0-next.0",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Props-Labs/svelte-fuels.git"
@@ -63,6 +63,6 @@
 	"type": "module",
 	"dependencies": {
 		"@fuels/connectors": "^0.5.0",
-		"fuels": "^0.92.0"
+		"fuels": "0.0.0-next-20240819235155"
 	}
 }
